--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConexMySql": "server=localhost;database=tallerdb;user=root;password=1234;"
+    "ConexMySql": "server=localhost;database=talleres1db;user=root;password=1234;"
   }
 }
